Fix scanSideState assertion https://bugs.webkit.org/show_bug.cgi?id=206257

Reviewed by Yusuke Suzuki.

* runtime/VM.cpp:
(JSC::VM::scanSideState const):

Canonical link: https://commits.webkit.org/219360@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254549 268f45cc-cd09-0410-ab3c-d52691b4dbfc